RESOLVED FIXED120183
WebCore fails to link due to changes in Objective-C++ ABI in trunk clang
https://bugs.webkit.org/show_bug.cgi?id=120183
Summary WebCore fails to link due to changes in Objective-C++ ABI in trunk clang
David Kilzer (:ddkilzer)
Reported 2013-08-22 17:14:38 PDT
The trunk version of clang made an ABI change for Objective-C++ parameters that caused WebCore to fail to link. The short-term fix is to change the parameter type from id<protocol> to just id and add an ASSERT that the parameter still conforms to the protocol.
Attachments
Patch v1 (2.47 KB, patch)
2013-08-22 17:19 PDT, David Kilzer (:ddkilzer)
no flags
David Kilzer (:ddkilzer)
Comment 1 2013-08-22 17:15:38 PDT
David Kilzer (:ddkilzer)
Comment 2 2013-08-22 17:19:20 PDT
Created attachment 209409 [details] Patch v1
WebKit Commit Bot
Comment 3 2013-08-23 09:55:27 PDT
Comment on attachment 209409 [details] Patch v1 Clearing flags on attachment: 209409 Committed r154493: <http://trac.webkit.org/changeset/154493>
WebKit Commit Bot
Comment 4 2013-08-23 09:55:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.