Source/WebCore/platform/DragData.h
@@ -41,7 +41,8 @@
 #ifdef __OBJC__ 
 #import <Foundation/Foundation.h>
 #import <AppKit/NSDragging.h>
-typedef id <NSDraggingInfo> DragDataRef;
+// Use id instead of id <NSDraggingInfo> here due to clang ABI change. See <rdar://problem/14764114>.
+typedef id DragDataRef;
 #else
 typedef void* DragDataRef;
 #endif
